--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: robo3t-snap
-version: v1.2.1
+version: v1.3.1
 summary: Robo 3T
 
 description: |
@@ -42,6 +42,6 @@ parts:
           - locales-all
     tarball:
         plugin: dump
-        source: https://download.robomongo.org/1.2.1/linux/robo3t-1.2.1-linux-x86_64-3e50a65.tar.gz
+        source: https://download-test.robomongo.org/linux/robo3t-1.3.1-linux-x86_64-7419c406.tar.gz
         after: [desktop-qt5-robo3t]
 
