--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,16 +3,8 @@ name: CI
 on: push
 
 jobs:
-  my-job:
+  build:
     runs-on: ubuntu-20.04
-
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
-
-      - name: Install Snapcraft
-        uses: samuelmeuli/action-snapcraft@v1
-
-      # You can now run Snapcraft shell commands
-      - name: Use Snapcraft
-        run: snapcraft
+    - uses: actions/checkout@v2
+    - uses: snapcore/action-build@v1
