--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,3 +8,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: snapcore/action-build@v1
+      with:
+        - snapcraft-args: --enable-experimental-extensions
