--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: robo3t-snap
-version: v1.3.1
+version: v1.4.3
 summary: Robo 3T
 
 description: |
@@ -15,6 +15,8 @@ icon: snap/gui/icon.png
 grade: stable
 
 architectures: [amd64]
+
+base: core18
 
 apps:
     robo3t-snap:
@@ -40,8 +42,8 @@ parts:
           - libgdk-pixbuf2.0-0
           - libqt5svg5
           - locales-all
+          - libcurl3-gnutls
     tarball:
         plugin: dump
-        source: https://download-test.robomongo.org/linux/robo3t-1.3.1-linux-x86_64-7419c406.tar.gz
+        source: https://github.com/Studio3T/robomongo/releases/download/v1.4.3/robo3t-1.4.3-linux-x86_64-48f7dfd.tar.gz
         after: [desktop-qt5-robo3t]
-
